# neural

./: .env  .gitignore  .pylintrc  pyproject.toml
data_sets/: __init__.py  text-bad.txt  text-good.txt  text.txt
data_sets/object-detecton.v2i.voc/: README.dataset.txt  README.roboflow.txt
data_sets/object-detecton.v2i.voc/train/: frame_0001_png.rf.0310fe9112451c18aa9ba2f9a4f7d6ee.xml  frame_0001_png.rf.0b7c263602d0c47591336cefad5d496c.xml  frame_0001_png.rf.5acfc0972640e49417a2b524ee64f660.xml  frame_0002_png.rf.06059424162c28dc78f8ba99e0808c56.xml  frame_0002_png.rf.59aa161f4f4fa4c8e7355a529fa569c6.xml  frame_0002_png.rf.60361c69c521d586c73f7d2c4101a24d.xml  frame_0003_png.rf.434b5defabdbe2f5e566e920d4825dbf.xml  frame_0003_png.rf.501db1b630d1f4f207c3eacc5b1e4df2.xml  frame_0004_png.rf.35901ca95483758823211cb5e4da7305.xml  frame_0004_png.rf.e84e3321f583d1a58ff48dafc8bc9ae3.xml  frame_0004_png.rf.eca7ff970ff7c726742e195200864d11.xml  frame_0005_png.rf.03cd32ad2fb48b40ae40aa1375cd77cd.xml  frame_0005_png.rf.243880dd15eb97248d8478ba9b6b65a7.xml  frame_0005_png.rf.be05997d671e6463edde937f89736c2a.xml  frame_0006_png.rf.b2bd718a1a6a4b61e61948ee5a410a19.xml  (+470 more)
data_sets/raw/: datasets.py
src/: main.py
src/football/: data.py
src/keras_lessons/: lesson_1.py  numbers_nw.py
src/keras_lessons/cnn/: main.py  (+2 more)
src/llm/: backup.py  build_model.py  corpus.py  index.py  prepare_training.py  response.py  tokenizer.py
src/object/: __init__.py  custom.py  datasettest.py  detection.py  extendable.py  image_actions.py  main.py  model.py  prepare_dataset.py
src/utils/: image.py
(+31 files in other folders)
