[project]
name = "neural-networks"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleg",email = "keeperoleg26@gmail.com"}
]
requires-python = ">=3.11"
dependencies = ["tensorflow (>=2.18.0,<3.0.0)", "matplotlib (>=3.10.1,<4.0.0)", "seaborn (>=0.13.2,<0.14.0)", "scikit-learn (>=1.6.1,<2.0.0)", "pylint (>=3.3.4,<4.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
